# eit_dash

./: .bumpversion.cfg  .gitignore  CITATION.cff  CONTRIBUTING.md  README.dev.md  README.md  RUN  app.py  environment_lint.yml  project_setup.md  pyproject.toml  setup.cfg  setup.py  sonar-project.properties
.github/next_steps/: 02_citation.md  04_zenodo_integration.md
.github/workflows/: build.yml  cffconvert.yml  documentation.yml  lint.yml  next_steps.yml  release_pypi.yml  remote_build.yml
callbacks/: load_callbacks.py
cli/: cli.py
dash/: .bumpversion.cfg  CONTRIBUTING.md  NOTICE  README.md  next_steps.md  project_setup.md  pyproject.toml  setup.cfg
dash/.githooks/: pre-commit
dash/.github/next_steps/: 01_sonarcloud_integration.md  03_readthedocs.md  05_linting.md
dash/.github/workflows/: sonarcloud.yml
dash/dash/: my_module.py
dash/docs/: Makefile  conf.py  index.rst
dash/tests/: test_my_module.py
docs/: make.bat  user_manual.md
e2e_tests/: test_load_page.py
eit-dashboard/: element_ids.py  main.py
eit-dashboard/callbacks/: load_callbacks.py
eit-dashboard/definitions/: element_ids.py  layout_styles.py  option_lists.py
eit-dashboard/pages/: dummy.py  load.py  right.py
eit_dash/: __init__.py  app.py  main.py
eit_dash/callbacks/: analyze_callbacks.py  load_callbacks.py  preprocessing_callbacks.py
eit_dash/definitions/: constants.py  element_ids.py  layout_styles.py  option_lists.py
eit_dash/pages/: analyze.py  dummy.py  load.py  preprocessing.py
eit_dash/utils/: common.py  data_singleton.py
eit_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pages/: left.py  load.py
tests/: conftest.py  test_dummy.py  test_load_callbacks.py
tests/e2e_tests/: test_load_page.py
tests/unit_tests/: test_load_callbacks.py  test_preprocessing_callbacks.py
unit_tests/: test_load_callbacks.py
