[tool.poetry]
name = "eit_dash"
version = "0.1.0"
description = "GUI to load and analyze image data from electrical impedance tomography (EIT)"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"
classifiers =[
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10"
]
keywords =[
    "EIT - Electrical Impedance Tomography",
    "GUI"
]
packages = [{include = "eit_dash"}]

[tool.poetry.urls]
repository = "git@github.com:EIT-ALIVE/eit_dash"
"Bug Tracker" = "git@github.com:EIT-ALIVE/eit_dash/issues"

[tool.poetry.dependencies]
python = "^3.10"
dash = {extras = ["testing"], version = "^2.11.1"}
dash-bootstrap-components = "^1.4.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
prospector = {extras = ["with-pyroma"], version = "^1.10.2"}
urllib3 = "<2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["unit_tests", "e2e_tests"]

[tool.coverage.run]
branch = true
source = ["eit_dash"]
command_line = "-m pytest"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37,py38,py39,py310,py311
skip_missing_interpreters = true
[testenv]
commands = pytest
extras = dev
"""
