# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Dani Bodor
author_email = d.bodor@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
description = GUI to load and analyze image data from electrical impedance tomography (EIT)
keywords =
    EIT - Electrical Impedance Tomography
    GUI
long_description = file: README.md
long_description_content_type = text/markdown
name = dash
project_urls =
    Bug Tracker = git@github.com:EIT-ALIVE/dash/issues
url = git@github.com:EIT-ALIVE/dash
version = 0.1.0

[options]
zip_safe = False
python_requires = >=3.10
include_package_data = True
packages = find:
install_requires =
    dash
    dash_bootstrap_components

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    pytest
    pytest-cov
    tox
docs =
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    myst_parser
publishing =
    twine
    wheel

[options.packages.find]
include = dash, dash.*

